# IndieStudio_2021_Infogramm

./: CMakeLists.txt  Doxyfile  README.md  clean.ps1  clean.sh  main.cpp  setup.ps1  setup.sh
assets/blocks/: barrel.mtl  spawn.mtl  wall.mtl
assets/csv/: map_linux.csv  map_window.csv  textures.csv
assets/model/: poppy.iqm  poppywalk.iqm
doc/html/: AI_8hpp_source.html  AppError_8hpp_source.html  App_8hpp_source.html  AudioManager_8hpp_source.html  Barrel_8hpp_source.html  BlockFactory_8hpp_source.html  Block_8hpp_source.html  Bomb_8hpp_source.html  Button_8hpp_source.html  CharacterFactory_8hpp_source.html  CharacterManager_8hpp_source.html  Character_8hpp_source.html  Clock_8hpp_source.html  Controller_8hpp_source.html  Cube_8hpp_source.html  ECamera_8hpp_source.html  ECircle_8hpp_source.html  EColor_8hpp_source.html  EImage_8hpp_source.html  EMatrix_8h_source.html  EModel_8hpp_source.html  EMusic_8hpp_source.html  ERectangle_8hpp_source.html  ESound_8hpp_source.html  EText_8hpp_source.html  EVector2_8hpp_source.html  EVector3_8hpp_source.html  EVector4_8hpp_source.html  EWindow_8hpp_source.html  Empty_8hpp_source.html  Entity_8hpp_source.html  Game_8hpp_source.html  HowToPlay_8hpp_source.html  InputUser_8hpp_source.html  Items_8hpp_source.html  Loading_8hpp_source.html  MapParser_8hpp_source.html  Map_8hpp_source.html  Menu_8hpp_source.html  NBomb_8hpp_source.html  (+441 more)
include/App/: App.hpp
include/Block/: Barrel.hpp  Block.hpp  BlockFactory.hpp  Empty.hpp  Spawn.hpp  Wall.hpp
include/Bomb/: Bomb.hpp
include/Character/: AI.hpp  Character.hpp  CharacterFactory.hpp  CharacterManager.hpp  InputUser.hpp  Player.hpp
include/Clock/: Clock.hpp
include/Entity/: Entity.hpp
include/Error/: AppError.hpp
include/Items/: Items.hpp
include/Map/: Map.hpp  MapParser.hpp
include/PowerUp/: NBomb.hpp  PowerUp.hpp  Range.hpp  Speed.hpp
include/Scene/: Game.hpp  HowToPlay.hpp  Loading.hpp  Menu.hpp  Options.hpp  Pause.hpp  Scene.hpp  Scoreboard.hpp  SelectMap.hpp  Settings.hpp  Transition.hpp
include/System/: System.hpp
include/Widget/: Button.hpp  Widget.hpp
include/tools/: tools.hpp
map/: Battle_map.bmb  IndieStudio.bmb  TheBigOne.bmb  default_map.bmb  map_1.bmb  map_2.bmb  toto.bmb
src/App/: App.cpp
src/Block/: Barrel.cpp  BlockFactory.cpp  Empty.cpp  Spawn.cpp  Wall.cpp
src/Bomb/: Bomb.cpp
src/Character/: AI.cpp  CharacterFactory.cpp  CharacterManager.cpp  InputUser.cpp  Player.cpp
src/Clock/: Clock.cpp
src/Map/: Map.cpp  (+1 more)
(+110 files in other folders)
